Update api implementation to fill gapsl; add CI
